sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:2: error: not found: value getNombreValurs
def bubbleSort()  { for (i <- 0 to (getNombreValurs()) ) {
                                    ^